--- a/style.sass
+++ b/style.sass
@@ -13,7 +13,7 @@ $btn-primary-color: #FFFFFF
 
 // Mobile
 $tablet-width: 768px
-$mobile-width: 425px
+$mobile-width: 640px
 $iphone-x-landscape: 812px
 
 body
@@ -35,9 +35,9 @@ a
 	background-color: $main-blue
 	padding: 1em 1.5em
 	border-radius: 5px
-	font-size: 14px !important
-	@media only screen and (max-width: $iphone-x-landscape)
-		font-size: 10px !important
+	font-size: 14px
+	// @media only screen and (max-width: $iphone-x-landscape)
+	// 	font-size: 10px !important
 
 #header
 	height: auto
@@ -49,31 +49,37 @@ a
 	.nav
 		justify-content: space-evenly
 		align-items: center
-	li
-		margin: 0 0.8em
-	a
-		text-transform: uppercase
-		color: $main-blue
-		font-size: 14pt
-		@media only screen and (max-width: $iphone-x-landscape)
-			font-size: 10px
+		li
+			margin: 0 0.8em
+		a
+			text-transform: uppercase
+			color: $main-blue
+			font-size: 14pt
+			@media only screen and (max-width: $tablet-width + 200px)
+				font-size: 10px
 
-	.logo
-		margin-right: auto
-	#logo
-		max-height: 80px
-		@media only screen and (max-width: $tablet-width)
-			max-height: 40px
-	.no-mobile
-		@media only screen and (max-width: $mobile-width)
-			display: none
+		.btn-primary
+			font-size: 10px
+		.logo
+			margin-right: auto
+		#logo
+			max-height: 80px
+			@media only screen and (max-width: $tablet-width + 200px)
+				max-height: 40px
+		.no-mobile
+			@media only screen and (max-width: $mobile-width)
+				display: none
 
 
 #menu-btn
 	border: none
+	box-shadow: 0px 3px 10px #ddd
+	cursor: pointer
 	&:focus
 		outline: 0
-	@media only screen and (max-width: $mobile-width)
+	&:hover
+		box-shadow: 0px 5px 8px #ddd
+	// @media only screen and (max-width: $mobile-width)
 
 
 #menu
@@ -85,6 +91,12 @@ a
 	background: white
 	width: 308px
 	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50)
+	text-transform: uppercase
+	@media only screen and (max-width: $mobile-width)
+		font-size: 1.3rem
+	a
+		color: $main-blue
+		
 	@media only screen and (max-width: $mobile-width)
 		width: 100vw
 		height: auto
@@ -106,11 +118,21 @@ a
 	.close-menu
 		text-align: right
 		margin: 1em 2em
+		cursor: pointer
 		color: $main-blue
 
 #slide-show
 	max-width: 100%
-	margin-bottom: -3px
+
+	#img-div
+		background-image: url("../images/dog.png")
+		background-size: cover
+		background-position: center
+		background-repeat: no-repeat
+		height: 70vh
+		max-height: 600px
+		min-height: 300px
+
 	img
 		width: 100%
 		@media only screen and (max-width: $mobile-width)
@@ -123,6 +145,7 @@ a
 		padding: 0
 		margin: 0
 		background-color: #608bb2
+		
 	.text-items
 		flex-direction: column
 		align-items: center
@@ -184,7 +207,7 @@ a
 	@media only screen and (max-width: $mobile-width)
 		background-color: #608bb2
 		background-image: none
-		height: 80vh
+		height: initial
 
 	ul.news-list
 		padding: 0
@@ -197,16 +220,22 @@ a
 		@media only screen and (max-width: $mobile-width)
 			flex-direction: column
 			justify-content: space-evenly
+			padding: 1em 0
+
+	li.news-list-item
+		@media only screen and (max-width: $mobile-width)
+			width: 100%
 
 	li.news-list-item a
 		display: flex
-		justify-content: space-evenly
+		justify-content: space-around
 		@media only screen and (max-width: $mobile-width)
+			width: 100%
 			align-items: center
 		img
 			width: 80px
 			height: 80px
-			@media only screen and (max-width: $tablet-width)
+			@media only screen and (max-width: 900px)
 				display: none
 			@media only screen and (max-width: $mobile-width)
 				display: inline-block
@@ -218,12 +247,10 @@ a
 			font-size: 13px
 			letter-spacing: 1px
 			line-height: 23px
-			margin-left: 1em
 			width: 60%
 			@media only screen and (max-width: $tablet-width)
 				font-size: 11px
 				text-align: center
-				margin: auto
 
 	.divider-vert
 		border: 1px solid white
@@ -233,8 +260,8 @@ a
 		@media only screen and (max-width: $mobile-width)
 			border: 1px solid white
 			height: 0px
-			width: 75vw
-			margin: 1em 0
+			width: 90vw
+			margin: 1em auto
 
 #what-we-do
 	height: auto
@@ -245,6 +272,7 @@ a
 		flex-wrap: wrap
 		justify-content: space-between
 		align-items: center
+		overflow: hidden
 		@media only screen and (max-width: $tablet-width)
 			flex-direction: column
 			justify-content: space-evenly
@@ -314,6 +342,8 @@ a
 
 #others
 	background-image: url("../images/wave.png")
+	background-size: cover
+	background-position: center
 	width: 100%
 	height: auto
 	.others-container
@@ -341,7 +371,7 @@ a
 			align-items: flex-start
 			flex-wrap: wrap
 			padding: 0 4em
-			@media only screen and (max-width: $mobile-width)
+			@media only screen and (max-width: $tablet-width)
 				padding: 0
 				flex-direction: column
 				align-items: center
